--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title Homepage
+    meta(name="viewport" content="width=device-width, initial-scale=1")
+    link(rel="stylesheet", href="/css/style.css")
   body
     h1 Homepage
     a(href="/update-cobj") Add
@@ -9,13 +11,13 @@ html
       thead
         tr
           th ID
-          th Name
-          th Bio
-          th Type
+          th Nombre
+          th Autor
+          th Genero
       tbody
         each record in records
           tr
             td= record.id
             td= record.properties.name
-            td= record.properties.bio
-            td= record.properties.type
+            td= record.properties.author
+            td= record.properties.genre
